update README and Pulumi configs

--- a/Pulumi.yaml
+++ b/Pulumi.yaml
@@ -1,6 +1,9 @@
 name: unicorns.wtf
-description: my personal infrastructure...as code
-runtime: go
+description: reanimating my personal infrastructure...as code
+runtime:
+  name: yaml
+  options:
+    compiler: /home/ejs/.cargo/bin/nickel export -f yaml main.ncl
 config:
   pulumi:tags:
     value:
